@@ -50,7 +50,7 @@ SCHEMAS_TO_VALIDATE = (
    """, {'value': {'car': {'value': 'head'}, 'cdr': {'value': None}}}),
 )
 
-BINARY_INT_ENCODINGS = (
+BINARY_ENCODINGS = (
   (0, '00'),
   (-1, '01'),
   (1, '02'),
@@ -62,6 +62,37 @@ BINARY_INT_ENCODINGS = (
   (-8193, '81 80 01'),
 )
 
+DEFAULT_VALUE_EXAMPLES = (
+  ('"null"', 'null', None),
+  ('"boolean"', 'true', True),
+  ('"string"', '"foo"', u'foo'),
+  ('"bytes"', '"\u00FF\u00FF"', u'\xff\xff'),
+  ('"int"', '5', 5),
+  ('"long"', '5', 5L),
+  ('"float"', '1.1', 1.1),
+  ('"double"', '1.1', 1.1),
+  ('{"type": "fixed", "name": "F", "size": 2}', '"\u00FF\u00FF"', u'\xff\xff'),
+  ('{"type": "enum", "name": "F", "symbols": ["FOO", "BAR"]}', '"FOO"', 'FOO'),
+  ('{"type": "array", "items": "int"}', '[1, 2, 3]', [1, 2, 3]),
+  ('{"type": "map", "values": "int"}', '{"a": 1, "b": 2}', {'a': 1, 'b': 2}),
+  ('["int", "null"]', '5', 5),
+  ('{"type": "record", "name": "F", "fields": [{"name": "A", "type": "int"}]}',
+   '{"A": 5}', {'A': 5}),
+)
+
+LONG_RECORD_SCHEMA = schema.parse("""\
+  {"type": "record",
+   "name": "Test",
+   "fields": [{"name": "A", "type": "int"},
+              {"name": "B", "type": "int"},
+              {"name": "C", "type": "int"},
+              {"name": "D", "type": "int"},
+              {"name": "E", "type": "int"},
+              {"name": "F", "type": "int"},
+              {"name": "G", "type": "int"}]}""")
+
+LONG_RECORD_DATUM = {'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7}
+
 def avro_hexlify(reader):
   """Return the hex value, as a string, of a binary-encoded int or long."""
   bytes = []
@@ -72,222 +103,205 @@ def avro_hexlify(reader):
     bytes.append(hexlify(current_byte))
   return ' '.join(bytes)
 
+def print_test_name(test_name):
+  print ''
+  print test_name
+  print '=' * len(test_name)
+  print ''
+
+def write_datum(datum, writers_schema):
+  writer = cStringIO.StringIO()
+  encoder = io.BinaryEncoder(writer)
+  datum_writer = io.DatumWriter(writers_schema)
+  datum_writer.write(datum, encoder)
+  return writer, encoder, datum_writer
+
+def read_datum(buffer, writers_schema, readers_schema=None):
+  reader = cStringIO.StringIO(buffer.getvalue())
+  decoder = io.BinaryDecoder(reader)
+  datum_reader = io.DatumReader(writers_schema, readers_schema)
+  return datum_reader.read(decoder)
+
+def check_binary_encoding(number_type):
+  print_test_name('TEST BINARY %s ENCODING' % number_type.upper())
+  correct = 0
+  for datum, hex_encoding in BINARY_ENCODINGS:
+    print 'Datum: %d' % datum
+    print 'Correct Encoding: %s' % hex_encoding
+
+    writers_schema = schema.parse('"%s"' % number_type.lower())
+    writer, encoder, datum_writer = write_datum(datum, writers_schema)
+    writer.seek(0)
+    hex_val = avro_hexlify(writer)
+
+    print 'Read Encoding: %s' % hex_val
+    if hex_encoding == hex_val: correct += 1
+    print ''
+  return correct
+
+def check_skip_number(number_type):
+  print_test_name('TEST SKIP %s' % number_type.upper())
+  correct = 0
+  for value_to_skip, hex_encoding in BINARY_ENCODINGS:
+    VALUE_TO_READ = 6253
+    print 'Value to Skip: %d' % value_to_skip
+
+    # write the value to skip and a known value
+    writers_schema = schema.parse('"%s"' % number_type.lower())
+    writer, encoder, datum_writer = write_datum(value_to_skip, writers_schema)
+    datum_writer.write(VALUE_TO_READ, encoder)
+
+    # skip the value
+    reader = cStringIO.StringIO(writer.getvalue())
+    decoder = io.BinaryDecoder(reader)
+    decoder.skip_long()
+
+    # read data from string buffer
+    datum_reader = io.DatumReader(writers_schema)
+    read_value = datum_reader.read(decoder)
+
+    print 'Read Value: %d' % read_value
+    if read_value == VALUE_TO_READ: correct += 1
+    print ''
+  return correct
+    
 class TestIO(unittest.TestCase):
+  #
+  # BASIC FUNCTIONALITY
+  #
+
   def test_validate(self):
-    print ''
-    print 'Test Validate'
-    print '============='
-    print ''
+    print_test_name('TEST VALIDATE')
     passed = 0
-    for expected_schema, datum in SCHEMAS_TO_VALIDATE:
-      print expected_schema, datum
-      validated = io.validate(schema.parse(expected_schema), datum)
-      print validated
+    for example_schema, datum in SCHEMAS_TO_VALIDATE:
+      print 'Schema: %s' % example_schema
+      print 'Datum: %s' % datum
+      validated = io.validate(schema.parse(example_schema), datum)
+      print 'Valid: %s' % validated
       if validated: passed += 1
     self.assertEquals(passed, len(SCHEMAS_TO_VALIDATE))
 
-  # TODO(hammer): print bytes in python
-  def test_encode(self):
-    print ''
-    print 'Test Encode'
-    print '============='
-    print ''
-
-    # boolean
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_boolean(True)
-    print 'Boolean: ' + repr(writer.getvalue())
-
-    # string
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_utf8(unicode('adsfasdf09809dsf-=adsf'))
-    print 'String: ' + repr(writer.getvalue())
-
-    # int
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_int(1)
-    print 'Int: ' + repr(writer.getvalue())
-
-    # long
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_long(1)
-    print 'Long: ' + repr(writer.getvalue())
-
-    # float
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_float(1.0)
-    print 'Float: ' + repr(writer.getvalue())
-
-    # double
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_double(1.0)
-    print 'Double: ' + repr(writer.getvalue())
-
-    # bytes
-    writer = cStringIO.StringIO()
-    string_encoder = io.BinaryEncoder(writer)
-    string_encoder.write_bytes('12345abcd')
-    print 'Bytes: ' + repr(writer.getvalue())
-    
-  def test_decode(self):
-    pass
-
-  def test_datum_reader(self):
-    pass
-
-  def test_datum_writer(self):
-    pass
-
   def test_round_trip(self):
-    print ''
-    print 'TEST ROUND TRIP'
-    print '==============='
-    print ''
+    print_test_name('TEST ROUND TRIP')
     correct = 0
     for example_schema, datum in SCHEMAS_TO_VALIDATE:
       print 'Schema: %s' % example_schema
       print 'Datum: %s' % datum
-      print 'Valid: %s' % io.validate(schema.parse(example_schema), datum)
 
-      # write datum in binary to string buffer
-      writer = cStringIO.StringIO()
-      encoder = io.BinaryEncoder(writer)
-      datum_writer = io.DatumWriter(schema.parse(example_schema))
-      datum_writer.write(datum, encoder)
-
-      # read data from string buffer
-      reader = cStringIO.StringIO(writer.getvalue())
-      decoder = io.BinaryDecoder(reader)
-      datum_reader = io.DatumReader(schema.parse(example_schema))
-      round_trip_datum = datum_reader.read(decoder)
+      writers_schema = schema.parse(example_schema)
+      writer, encoder, datum_writer = write_datum(datum, writers_schema)
+      round_trip_datum = read_datum(writer, writers_schema)
 
       print 'Round Trip Datum: %s' % round_trip_datum
       if datum == round_trip_datum: correct += 1
-      print 'Correct Round Trip: %s' % (datum == round_trip_datum)
-      print ''
     self.assertEquals(correct, len(SCHEMAS_TO_VALIDATE))
 
+  #
+  # BINARY ENCODING OF INT AND LONG
+  #
+
   def test_binary_int_encoding(self):
-    print ''
-    print 'TEST BINARY INT ENCODING'
-    print '========================'
-    print ''
-    correct = 0
-    for value, hex_encoding in BINARY_INT_ENCODINGS:
-      print 'Value: %d' % value
-      print 'Correct Encoding: %s' % hex_encoding
-
-      # write datum in binary to string buffer
-      buffer = cStringIO.StringIO()
-      encoder = io.BinaryEncoder(buffer)
-      datum_writer = io.DatumWriter(schema.parse('"int"'))
-      datum_writer.write(value, encoder)
-
-      # read it out of the buffer and hexlify it
-      buffer.seek(0)
-      hex_val = avro_hexlify(buffer)
-
-      # check it
-      print 'Read Encoding: %s' % hex_val
-      if hex_encoding == hex_val: correct += 1
-      print ''
-    self.assertEquals(correct, len(BINARY_INT_ENCODINGS))
+    correct = check_binary_encoding('int')
+    self.assertEquals(correct, len(BINARY_ENCODINGS))
 
   def test_binary_long_encoding(self):
-    print ''
-    print 'TEST BINARY LONG ENCODING'
-    print '========================='
-    print ''
-    correct = 0
-    for value, hex_encoding in BINARY_INT_ENCODINGS:
-      print 'Value: %d' % value
-      print 'Correct Encoding: %s' % hex_encoding
-
-      # write datum in binary to string buffer
-      buffer = cStringIO.StringIO()
-      encoder = io.BinaryEncoder(buffer)
-      datum_writer = io.DatumWriter(schema.parse('"long"'))
-      datum_writer.write(value, encoder)
-
-      # read it out of the buffer and hexlify it
-      buffer.seek(0)
-      hex_val = avro_hexlify(buffer)
-
-      # check it
-      print 'Read Encoding: %s' % hex_val
-      if hex_encoding == hex_val: correct += 1
-      print ''
-    self.assertEquals(correct, len(BINARY_INT_ENCODINGS))
-
-  def test_skip_long(self):
-    print ''
-    print 'TEST SKIP LONG'
-    print '=============='
-    print ''
-    correct = 0
-    for value_to_skip, hex_encoding in BINARY_INT_ENCODINGS:
-      VALUE_TO_READ = 6253
-      print 'Value to Skip: %d' % value_to_skip
-
-      # write some data in binary to string buffer
-      writer = cStringIO.StringIO()
-      encoder = io.BinaryEncoder(writer)
-      datum_writer = io.DatumWriter(schema.parse('"long"'))
-      datum_writer.write(value_to_skip, encoder)
-      datum_writer.write(VALUE_TO_READ, encoder)
-
-      # skip the value
-      reader = cStringIO.StringIO(writer.getvalue())
-      decoder = io.BinaryDecoder(reader)
-      decoder.skip_long()
-
-      # read data from string buffer
-      datum_reader = io.DatumReader(schema.parse('"long"'))
-      read_value = datum_reader.read(decoder)
-
-      # check it
-      print 'Read Value: %d' % read_value
-      if read_value == VALUE_TO_READ: correct += 1
-      print ''
-    self.assertEquals(correct, len(BINARY_INT_ENCODINGS))
+    correct = check_binary_encoding('long')
+    self.assertEquals(correct, len(BINARY_ENCODINGS))
 
   def test_skip_int(self):
-    print ''
-    print 'TEST SKIP INT'
-    print '============='
-    print ''
+    correct = check_skip_number('int')
+    self.assertEquals(correct, len(BINARY_ENCODINGS))
+
+  def test_skip_long(self):
+    correct = check_skip_number('long')
+    self.assertEquals(correct, len(BINARY_ENCODINGS))
+
+  #
+  # SCHEMA RESOLUTION
+  #
+
+  def test_unknown_symbol(self):
+    print_test_name('TEST UNKNOWN SYMBOL')
+    writers_schema = schema.parse("""\
+      {"type": "enum", "name": "Test",
+       "symbols": ["FOO", "BAR"]}""")
+    datum_to_write = 'FOO'
+
+    readers_schema = schema.parse("""\
+      {"type": "enum", "name": "Test",
+       "symbols": ["BAR", "BAZ"]}""")
+
+    writer, encoder, datum_writer = write_datum(datum_to_write, writers_schema)
+    reader = cStringIO.StringIO(writer.getvalue())
+    decoder = io.BinaryDecoder(reader)
+    datum_reader = io.DatumReader(writers_schema, readers_schema)
+    self.assertRaises(io.SchemaResolutionException, datum_reader.read, decoder)
+
+  def test_default_value(self):
+    print_test_name('TEST DEFAULT VALUE')
+    writers_schema = LONG_RECORD_SCHEMA
+    datum_to_write = LONG_RECORD_DATUM
+
     correct = 0
-    for value_to_skip, hex_encoding in BINARY_INT_ENCODINGS:
-      VALUE_TO_READ = 6253
-      print 'Value to Skip: %d' % value_to_skip
+    for field_type, default_json, default_datum in DEFAULT_VALUE_EXAMPLES:
+      readers_schema = schema.parse("""\
+        {"type": "record", "name": "Test",
+         "fields": [{"name": "H", "type": %s, "default": %s}]}
+        """ % (field_type, default_json))
+      datum_to_read = {'H': default_datum}
 
-      # write some data in binary to string buffer
-      writer = cStringIO.StringIO()
-      encoder = io.BinaryEncoder(writer)
-      datum_writer = io.DatumWriter(schema.parse('"int"'))
-      datum_writer.write(value_to_skip, encoder)
-      datum_writer.write(VALUE_TO_READ, encoder)
+      writer, encoder, datum_writer = write_datum(datum_to_write, writers_schema)
+      datum_read = read_datum(writer, writers_schema, readers_schema)
+      print 'Datum Read: %s' % datum_read
+      if datum_to_read == datum_read: correct += 1
+    self.assertEquals(correct, len(DEFAULT_VALUE_EXAMPLES))
 
-      # skip the value
-      reader = cStringIO.StringIO(writer.getvalue())
-      decoder = io.BinaryDecoder(reader)
-      decoder.skip_int()
+  def test_no_default_value(self):
+    print_test_name('TEST NO DEFAULT VALUE')
+    writers_schema = LONG_RECORD_SCHEMA
+    datum_to_write = LONG_RECORD_DATUM
 
-      # read data from string buffer
-      datum_reader = io.DatumReader(schema.parse('"int"'))
-      read_value = datum_reader.read(decoder)
+    readers_schema = schema.parse("""\
+      {"type": "record", "name": "Test",
+       "fields": [{"name": "H", "type": "int"}]}""")
 
-      # check it
-      print 'Read Value: %d' % read_value
-      if read_value == VALUE_TO_READ: correct += 1
-      print ''
-    self.assertEquals(correct, len(BINARY_INT_ENCODINGS))
+    writer, encoder, datum_writer = write_datum(datum_to_write, writers_schema)
+    reader = cStringIO.StringIO(writer.getvalue())
+    decoder = io.BinaryDecoder(reader)
+    datum_reader = io.DatumReader(writers_schema, readers_schema)
+    self.assertRaises(io.SchemaResolutionException, datum_reader.read, decoder)
+
+  def test_projection(self):
+    print_test_name('TEST PROJECTION')
+    writers_schema = LONG_RECORD_SCHEMA
+    datum_to_write = LONG_RECORD_DATUM
+
+    readers_schema = schema.parse("""\
+      {"type": "record", "name": "Test",
+       "fields": [{"name": "E", "type": "int"},
+                  {"name": "F", "type": "int"}]}""")
+    datum_to_read = {'E': 5, 'F': 6}
+
+    writer, encoder, datum_writer = write_datum(datum_to_write, writers_schema)
+    datum_read = read_datum(writer, writers_schema, readers_schema)
+    print 'Datum Read: %s' % datum_read
+    self.assertEquals(datum_to_read, datum_read)
+
+  def test_field_order(self):
+    print_test_name('TEST FIELD ORDER')
+    writers_schema = LONG_RECORD_SCHEMA
+    datum_to_write = LONG_RECORD_DATUM
+
+    readers_schema = schema.parse("""\
+      {"type": "record", "name": "Test",
+       "fields": [{"name": "F", "type": "int"},
+                  {"name": "E", "type": "int"}]}""")
+    datum_to_read = {'E': 5, 'F': 6}
+
+    writer, encoder, datum_writer = write_datum(datum_to_write, writers_schema)
+    datum_read = read_datum(writer, writers_schema, readers_schema)
+    print 'Datum Read: %s' % datum_read
+    self.assertEquals(datum_to_read, datum_read)
 
 if __name__ == '__main__':
   unittest.main()
